add iceberg and minio

--- a/coordinator/catalog/mongo.properties
+++ b/coordinator/catalog/mongo.properties
@@ -1,2 +1,2 @@
 connector.name=mongodb
-mongodb.connection-url=mongodb://${MONGO_HOSS:host.docker.internal}:{MONGO_PORT:27017}/
+mongodb.connection-url=mongodb://host.docker.internal:27017
