--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,40 +1,112 @@
 version: '3'
 services:
+  rest:
+    image: tabulario/iceberg-rest
+    container_name: iceberg-rest
+    networks:
+      iceberg_net:
+    ports:
+      - 8181:8181
+    environment:
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
+      - CATALOG_WAREHOUSE=s3://warehouse/
+      - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
+      - CATALOG_S3_ENDPOINT=http://minio:9000
+  minio:
+    image: minio/minio
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_DOMAIN=minio
+    networks:
+      iceberg_net:
+        aliases:
+          - warehouse.minio
+    ports:
+      - 9001:9001
+      - 9000:9000
+    command: [ "server", "/data", "--console-address", ":9001" ]
+  mc:
+    depends_on:
+      - minio
+    image: minio/mc
+    container_name: mc
+    networks:
+      iceberg_net:
+    environment:
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
+    entrypoint: >
+      /bin/sh -c "
+      until (/usr/bin/mc config host add minio http://minio:9000 admin password) do echo '...waiting...' && sleep 1; done;
+      /usr/bin/mc rm -r --force minio/warehouse;
+      /usr/bin/mc mb minio/warehouse;
+      /usr/bin/mc policy set public minio/warehouse;
+      tail -f /dev/null
+      "
+
   coordinator:
     image: 'trinodb/trino:430'
     container_name: "coordinator"
+    networks:
+      iceberg_net:
     ports:
       - "8080:8080"
     environment:
-      - TRINO_JVM_MAX_HEAP=5G
+      - TRINO_JVM_MAX_HEAP=3G
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
     env_file:
       - .env
     volumes:
-      - ./coordinator:/coordinator/trino/:ro
+      - ./coordinator:/etc/trino/
 
   worker1:
     image: 'trinodb/trino:430'
+    networks:
+      iceberg_net:
     environment:
-      - TRINO_JVM_MAX_HEAP=3G
+      - TRINO_JVM_MAX_HEAP=1G
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
     env_file:
       - .env
     volumes:
-      - ./worker1:/coordinator/trino/:ro
+      - ./worker1:/etc/trino/
 
   worker2:
     image: 'trinodb/trino:430'
+    networks:
+      iceberg_net:
     environment:
-      - TRINO_JVM_MAX_HEAP=3G
+      - TRINO_JVM_MAX_HEAP=1G
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
     env_file:
       - .env
     volumes:
-      - ./worker2:/coordinator/trino/:ro
+      - ./worker2:/etc/trino/
 
   worker3:
     image: 'trinodb/trino:430'
+    networks:
+      iceberg_net:
     environment:
-      - TRINO_JVM_MAX_HEAP=3G
+      - TRINO_JVM_MAX_HEAP=1G
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
     env_file:
       - .env
     volumes:
-      - ./worker3:/coordinator/trino/:ro
+      - ./worker3:/etc/trino/
+
+networks:
+  iceberg_net:
