--- a/worker1/catalog/mongo.properties
+++ b/worker1/catalog/mongo.properties
@@ -1,2 +1,2 @@
 connector.name=mongodb
-mongodb.connection-url=mongodb://${MONGO_HOSS:host.docker.internal}:{MONGO_PORT:27017}/
+mongodb.connection-url=mongodb://${ENV:MONGO_HOST}:${ENV:MONGO_PORT}
