--- a/worker3/catalog/mysql.properties
+++ b/worker3/catalog/mysql.properties
@@ -1,5 +1,5 @@
 # Mysql Connector
 connector.name=mysql
-connection-url=jdbc:mysql://${MYSQL_HOST:-}:${MYSQL_PORT:-}
-connection-user=${MYSQL_USER:-}
-connection-password=${MYSQL_PASSWORD:-}
+connection-url=jdbc:mysql://host.docker.internal:3306
+connection-user=root
+connection-password=c299792458
