--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,13 @@ MONGO_PORT=27017
 # Mysql
 MYSQL_HOST=host.docker.internal
 MYSQL_PORT=3306
-MSYQL_USER=user_name
-MYSQL_PASSWORD=password
+MYSQL_USER=root
+MYSQL_PASSWORD=c299792458
+
+# ICEBERG
+S3_ENDPOINT=http://minio:9000
+S3_USER=admin
+S3_PASSWORD=password
+ICEBERG_REST_HOST=iceberg-rest
+ICEBERG_REST_PORT=8181
+ICEBERG_BUCKET=s3://warehouse/
