--- a/coordinator/catalog/iceberg.properties
+++ b/coordinator/catalog/iceberg.properties
@@ -1,9 +1,9 @@
 connector.name=iceberg
 iceberg.catalog.type=rest
-iceberg.rest-catalog.uri=http://iceberg-rest:8181
-iceberg.rest-catalog.warehouse=s3://warehouse/
+iceberg.rest-catalog.uri=http://${ENV:ICEBERG_REST_HOST}:${ENV:ICEBERG_REST_PORT}
+iceberg.rest-catalog.warehouse=${ENV:ICEBERG_BUCKET}
 iceberg.file-format=PARQUET
-hive.s3.endpoint=http://minio:9000
+hive.s3.endpoint=${ENV:S3_ENDPOINT}
 hive.s3.path-style-access=true
-hive.s3.aws-access-key=admin
-hive.s3.aws-secret-key=password
+hive.s3.aws-access-key=${ENV:S3_USER}
+hive.s3.aws-secret-key=${ENV:S3_PASSWORD}
