--- a/worker1/catalog/mysql.properties
+++ b/worker1/catalog/mysql.properties
@@ -1,5 +1,5 @@
 # Mysql Connector
 connector.name=mysql
-connection-url=jdbc:mysql://host.docker.internal:3306
-connection-user=root
-connection-password=c299792458
+connection-url=jdbc:mysql://${ENV:MYSQL_HOST}:${ENV:MYSQL_PORT}
+connection-user=${ENV:MYSQL_USER}
+connection-password=${ENV:MYSQL_PASSWORD}
