--- a/coordinator/jvm.config
+++ b/coordinator/jvm.config
@@ -1,8 +1,9 @@
 -server
--Xmx7G
--XX:-UseBiasedLocking
+-Xmx4G
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
+-XX:+UnlockDiagnosticVMOptions
+-XX:G1NumCollectionsKeepPinned=10000000
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+UseGCOverheadLimit
